# Powermanga

./: CHANGES  CMakeLists.txt  README  config.h.in  configure.ac  powermanga.6  powermanga.xpm
data/: Makefile.am
graphics/: Makefile.am  movie_introduction.gca
graphics/bitmap/: Makefile.am  tlk_games_logo.spr
man/: powermanga.fr.6
order/: scriptorder2_en.txt  scriptorder3_fr.txt
src/: Makefile.am  assembler.S  assembler.h  assembler_opt.S  bonus.c  bonus.h  config_file.c  config_file.h  congratulations.c  congratulations.h  counter_shareware.c  counter_shareware.h  curve_phase.c  curve_phase.h  display.c  display.h  display_sdl.c  display_sdl2.c  display_x11.c  electrical_shock.c  electrical_shock.h  enemies.c  enemies.h  energy_gauge.c  energy_gauge.h  explosions.c  explosions.h  extra_gun.c  extra_gun.h  gfx_wrapper.c  gfx_wrapper.h  gfxroutines.c  gfxroutines.h  grid_phase.c  grid_phase.h  guardians.c  guardians.h  images.c  images.h  inits_game.c  (+45 more)
tags/0.92/graphics/sprites/guardians/: Makefile.am  guardian_00.spr
tags/0.93.1/: Makefile.am  README.PSP
tags/0.93.1/data/levels/grids_phase/: Makefile.am
tags/0.93.1/graphics/bitmap/fonts/: font_game.spr
tags/0.93.1/graphics/sprites/: energy_gauge_red.spr  satellite_protections.spr
tags/0.93.1/graphics/sprites/guardians/: guardian_07.spr  guardian_10.spr
tags/0.93.1/graphics/sprites/meteors/: meteor_00.spr  meteor_07.spr  meteor_11.spr  meteor_27.spr  meteor_28.spr  meteor_40.spr
tags/0.93.1/graphics/sprites/spaceships/: spaceship_1_frame_3.spr  spaceship_1_frame_4.spr  spaceship_3_frame_0.spr
tags/0.93.1/graphics/sprites/stars/: star_big_5.spr
tags/0.93.1/html/powermanga_en/: ar01s01s02.html  ar01s03s03s03.html  ar01s04.html  ar01s04s01.html  ar01s06s02.html  ar01s06s02s01.html
tags/0.93.1/order/: scriptorder1_fr.txt
tags/0.93.1/src/: Makefile.gp2x  assembler.S  assembler_opt.S  bonus.h  config_file.h  counter_shareware.h  curve_phase.c  display.c  enemies.c  energy_gauge.c  energy_gauge.h  explosions.h  extra_gun.c  extra_gun.h  gfx_wrapper.c  guardians.c  guardians.h  images.c  lispreader.c  lispreader.h  lonely_foes.h  menu.h  menu_sections.c  meteors_phase.c  meteors_phase.h  movie.c  options_panel.h  powermanga.h  satellite_protections.h  script_page.c  script_page.h  scrolltext.c  sdl_mixer.c  sdl_mixer.h  shots.c  shots.h  spaceship_weapons.c  spaceship_weapons.h  special_keys.c  sprites_string.c  (+6 more)
tags/0.93.1/texts/: about_en.txt  scroll_it.txt
tags/0.93/graphics/sprites/meteors/: Makefile.am  meteor_21.spr  meteor_30.spr  meteor_37.spr
texts/: Makefile.am  about_en.txt  about_fr.txt  about_it.txt  order_fr.txt  scroll_en.txt  scroll_fr.txt
trunk/: AUTHORS  CHANGES  EMSCRIPTEN.txt  README.GP2X  bootstrap  config.h.in  configure.ac  powermanga.desktop
trunk/data/curves/: Makefile.am
trunk/data/levels/curves_phase/: Makefile.am
trunk/graphics/: font_overlay.pcx  right_options_panel.pcx
trunk/graphics/bitmap/: main_menu.spr  options_panel_anims.spr  scores_multiplier.spr
trunk/graphics/bitmap/fonts/: font_score.spr  font_scrolltext.spr
trunk/graphics/sprites/: Makefile.am  all_shots.spr  bonus_gems.spr  energy_gauge_blue.spr  explosions.spr  extra_guns.spr
trunk/graphics/sprites/guardians/: guardian_01.spr  guardian_02.spr  guardian_04.spr  guardian_06.spr  guardian_11.spr  guardian_13.spr
trunk/graphics/sprites/meteors/: meteor_04.spr  meteor_08.spr  meteor_09.spr  meteor_12.spr  meteor_13.spr  meteor_15.spr  meteor_16.spr  meteor_18.spr  meteor_19.spr  meteor_20.spr  meteor_22.spr  meteor_24.spr  meteor_26.spr  meteor_29.spr  meteor_36.spr  meteor_38.spr  meteor_42.spr
trunk/graphics/sprites/spaceships/: Makefile.am  spaceship_1_frame_2.spr  spaceship_2_frame_3.spr  spaceship_3_frame_1.spr  spaceship_3_frame_2.spr  spaceship_3_frame_3.spr  spaceship_3_frame_4.spr  spaceship_4_frame_0.spr  spaceship_4_frame_2.spr  spaceship_5_frame_1.spr  spaceship_5_frame_2.spr  spaceship_5_frame_3.spr
trunk/graphics/sprites/stars/: Makefile.am  star_big_1.spr  star_big_3.spr  star_big_4.spr  star_little_2.spr  star_little_3.spr  star_little_4.spr  star_little_7.spr  star_middle_0.spr  star_middle_1.spr  star_middle_2.spr  star_middle_3.spr  star_middle_5.spr  star_middle_7.spr  star_spaceship_0.spr  star_spaceship_3.spr
trunk/html/powermanga_en/: ar01s01.html  ar01s02s04.html  ar01s03.html  ar01s03s01.html  ar01s03s03s01.html  ar01s03s03s02.html  ar01s03s03s04.html  ar01s04s02.html  ar01s05.html  ar01s05s01.html  ar01s05s03.html  ar01s06s02s02.html  ar01s08.html  ar01s08s01.html  ar01s08s02.html  ar01s08s02s01.html  ar01s08s02s03.html  ar01s09.html  index.html  style.css
trunk/html/powermanga_en/powermanga_en_fichiers/: filelist.xml
trunk/html/powermanga_fr/: ar01s01s02.html  ar01s02.html  ar01s02s03.html  ar01s02s04.html  ar01s02s05.html  ar01s03s01.html  ar01s03s02.html  ar01s03s03s01.html  ar01s03s03s03.html  ar01s03s03s05.html  ar01s04s01.html  ar01s04s02.html  ar01s04s03.html  ar01s05.html  ar01s05s01.html  ar01s05s02.html  ar01s05s03.html  ar01s06.html  ar01s06s01.html  ar01s06s02s01.html  ar01s06s02s02.html  ar01s07.html  ar01s08.html  ar01s08s02.html  ar01s09.html  index.html
trunk/man/: powermanga.fr.6
trunk/order/: scriptorder2_fr.txt  scriptorder3_en.txt
trunk/sounds/: Makefile.am  music_congratulations.zik  music_game.zik  music_menu.zik
trunk/sounds/handheld_console/: Makefile.am
trunk/src/: Makefile.am  Makefile.psp  assembler.S  assembler_opt.S  bonus.h  config_file.c  congratulations.c  counter_shareware.c  display.h  display_sdl.c  display_x11.c  electrical_shock.h  enemies.h  energy_gauge.c  explosions.c  extra_gun.h  gfx_wrapper.c  grid_phase.c  guardians.c  guardians.h  images.c  inits_game.c  log_recorder.h  lonely_foes.c  main.c  menu.c  menu.h  menu_sections.h  options_panel.c  powermanga.c  powermanga.h  satellite_protections.c  scale2x.c  sdl_mixer.c  shockwave.c  shockwave.h  spaceship.h  special_keys.c  sprites_string.h  starfield.h  (+4 more)
trunk/texts/: about_fr.txt  config.ini  order_fr.txt  scroll_en.txt  scroll_it.txt  text_it.txt
(+121 files in other folders)
