
SUBDIRS = texts src graphics graphics/bitmap graphics/bitmap/fonts graphics/sprites graphics/sprites/guardians graphics/sprites/stars graphics/sprites/meteors graphics/sprites/spaceships data data/curves data/levels/curves_phase data/levels/grids_phase sounds sounds/handheld_console
EXTRA_DIST = bootstrap

pkgdatadir = $(mandir)/man6
dist_pkgdata_DATA = powermanga.6

