
pkgdatadir = $(datadir)/games/powermanga/sounds

dist_pkgdata_DATA = \
  music_congratulations.zik \
  music_game.zik \
  music_menu.zik \
  sound_big_explosion_1.wav \
  sound_big_explosion_2.wav \
  sound_big_explosion_3.wav \
  sound_big_explosion_4.wav \
  sound_circular_shock.wav \
  sound_downgrade_spaceship.wav \
  sound_enemy_fire_1.wav \
  sound_enemy_fire_2.wav \
  sound_green_gem.wav \
  sound_guardian_fire_1.wav \
  sound_guardian_fire_2.wav \
  sound_guardian_fire_3.wav \
  sound_lonely_foe.wav \
  sound_medium_explosion_1.wav \
  sound_medium_explosion_2.wav \
  sound_medium_explosion_3.wav \
  sound_medium_explosion_4.wav \
  sound_purple_gem.wav \
  sound_red_gem.wav \
  sound_select_closed_option.wav \
  sound_select_option.wav \
  sound_small_explosion_1.wav \
  sound_small_explosion_2.wav \
  sound_small_explosion_3.wav \
  sound_small_explosion_4.wav \
  sound_spaceship_fire.wav \
  sound_upgrade_spaceship.wav \
  sound_yellow_gem.wav 
