
pkgdatadir = $(datadir)/games/powermanga/data/curves

dist_pkgdata_DATA = \
  bezier_curve_000.bin \
  bezier_curve_001.bin \
  bezier_curve_002.bin \
  bezier_curve_003.bin \
  bezier_curve_004.bin \
  bezier_curve_005.bin \
  bezier_curve_006.bin \
  bezier_curve_007.bin \
  bezier_curve_008.bin \
  bezier_curve_009.bin \
  bezier_curve_010.bin \
  bezier_curve_011.bin \
  bezier_curve_012.bin \
  bezier_curve_013.bin \
  bezier_curve_014.bin \
  bezier_curve_015.bin \
  bezier_curve_016.bin \
  bezier_curve_017.bin \
  bezier_curve_018.bin \
  bezier_curve_019.bin \
  bezier_curve_020.bin \
  bezier_curve_021.bin \
  bezier_curve_022.bin \
  bezier_curve_023.bin \
  bezier_curve_024.bin \
  bezier_curve_025.bin \
  bezier_curve_026.bin \
  bezier_curve_027.bin \
  bezier_curve_028.bin \
  bezier_curve_029.bin \
  bezier_curve_030.bin \
  bezier_curve_031.bin \
  bezier_curve_032.bin \
  bezier_curve_033.bin \
  bezier_curve_034.bin \
  bezier_curve_035.bin \
  bezier_curve_036.bin \
  bezier_curve_037.bin \
  bezier_curve_038.bin \
  bezier_curve_039.bin \
  bezier_curve_040.bin \
  bezier_curve_041.bin \
  bezier_curve_042.bin \
  bezier_curve_043.bin \
  bezier_curve_044.bin \
  bezier_curve_045.bin \
  bezier_curve_046.bin \
  bezier_curve_047.bin \
  bezier_curve_048.bin \
  bezier_curve_049.bin \
  bezier_curve_050.bin \
  bezier_curve_051.bin \
  bezier_curve_052.bin \
  bezier_curve_053.bin \
  bezier_curve_054.bin \
  bezier_curve_055.bin \
  bezier_curve_056.bin \
  bezier_curve_057.bin \
  bezier_curve_058.bin \
  bezier_curve_059.bin \
  bezier_curve_060.bin \
  bezier_curve_061.bin \
  bezier_curve_062.bin \
  bezier_curve_063.bin \
  bezier_curve_064.bin \
  bezier_curve_065.bin \
  bezier_curve_066.bin \
  bezier_curve_067.bin \
  bezier_curve_068.bin \
  bezier_curve_069.bin \
  bezier_curve_070.bin \
  bezier_curve_071.bin \
  bezier_curve_072.bin \
  bezier_curve_073.bin \
  bezier_curve_074.bin \
  bezier_curve_075.bin \
  bezier_curve_076.bin \
  bezier_curve_077.bin \
  bezier_curve_078.bin \
  bezier_curve_079.bin \
  bezier_curve_080.bin \
  bezier_curve_081.bin \
  bezier_curve_082.bin \
  bezier_curve_083.bin \
  bezier_curve_084.bin \
  bezier_curve_085.bin \
  bezier_curve_086.bin \
  bezier_curve_087.bin \
  bezier_curve_088.bin \
  bezier_curve_089.bin \
  bezier_curve_090.bin \
  bezier_curve_091.bin \
  bezier_curve_092.bin \
  bezier_curve_093.bin \
  bezier_curve_094.bin \
  bezier_curve_095.bin \
  bezier_curve_096.bin \
  bezier_curve_097.bin \
  bezier_curve_098.bin \
  bezier_curve_099.bin \
  bezier_curve_100.bin \
  bezier_curve_101.bin \
  bezier_curve_102.bin \
  bezier_curve_103.bin \
  bezier_curve_104.bin \
  bezier_curve_105.bin \
  bezier_curve_106.bin \
  bezier_curve_107.bin \
  bezier_curve_108.bin \
  bezier_curve_109.bin \
  bezier_curve_110.bin \
  bezier_curve_111.bin \
  bezier_curve_112.bin \
  bezier_curve_113.bin \
  bezier_curve_114.bin \
  bezier_curve_115.bin \
  bezier_curve_116.bin \
  bezier_curve_117.bin \
  bezier_curve_118.bin \
  bezier_curve_119.bin \
  bezier_curve_120.bin \
  bezier_curve_121.bin
