
pkgdatadir = $(datadir)/games/powermanga/graphics/sprites

dist_pkgdata_DATA = \
  all_enemies.spr \
  all_shots.spr \
  bonus_gems.spr \
  energy_gauge_blue.spr \
  energy_gauge_green.spr \
  energy_gauge_red.spr \
  explosion_fragments.spr \
  explosions.spr \
  extra_guns.spr \
  satellite_protections.spr
