
pkgdatadir = $(datadir)/games/powermanga/data/levels/curves_phase

dist_pkgdata_DATA = \
  curves_00.bin \
  curves_01.bin \
  curves_02.bin \
  curves_03.bin \
  curves_04.bin \
  curves_05.bin \
  curves_06.bin \
  curves_07.bin \
  curves_08.bin \
  curves_09.bin \
  curves_10.bin \
  curves_11.bin \
  curves_12.bin \
  curves_13.bin \
  curves_14.bin \
  curves_15.bin \
  curves_16.bin \
  curves_17.bin \
  curves_18.bin \
  curves_19.bin \
  curves_20.bin \
  curves_21.bin \
  curves_22.bin \
  curves_23.bin \
  curves_24.bin \
  curves_25.bin \
  curves_26.bin \
  curves_27.bin \
  curves_28.bin \
  curves_29.bin \
  curves_30.bin \
  curves_31.bin \
  curves_32.bin \
  curves_33.bin \
  curves_34.bin \
  curves_35.bin \
  curves_36.bin \
  curves_37.bin \
  curves_38.bin \
  curves_39.bin \
  curves_40.bin \
  curves_41.bin

