
pkgdatadir = $(datadir)/games/powermanga/graphics/sprites/spaceships

dist_pkgdata_DATA = \
  spaceship_1_frame_0.spr \
  spaceship_1_frame_1.spr \
  spaceship_1_frame_2.spr \
  spaceship_1_frame_3.spr \
  spaceship_1_frame_4.spr \
  spaceship_2_frame_0.spr \
  spaceship_2_frame_1.spr \
  spaceship_2_frame_2.spr \
  spaceship_2_frame_3.spr \
  spaceship_2_frame_4.spr \
  spaceship_3_frame_0.spr \
  spaceship_3_frame_1.spr \
  spaceship_3_frame_2.spr \
  spaceship_3_frame_3.spr \
  spaceship_3_frame_4.spr \
  spaceship_4_frame_0.spr \
  spaceship_4_frame_1.spr \
  spaceship_4_frame_2.spr \
  spaceship_4_frame_3.spr \
  spaceship_4_frame_4.spr \
  spaceship_5_frame_0.spr \
  spaceship_5_frame_1.spr \
  spaceship_5_frame_2.spr \
  spaceship_5_frame_3.spr \
  spaceship_5_frame_4.spr
