
pkgdatadir = $(datadir)/games/powermanga/graphics/sprites/stars

dist_pkgdata_DATA = \
  star_big_0.spr \
  star_big_1.spr \
  star_big_2.spr \
  star_big_3.spr \
  star_big_4.spr \
  star_big_5.spr \
  star_big_6.spr \
  star_big_7.spr \
  star_little_0.spr \
  star_little_1.spr \
  star_little_2.spr \
  star_little_3.spr \
  star_little_4.spr \
  star_little_5.spr \
  star_little_6.spr \
  star_little_7.spr \
  star_middle_0.spr \
  star_middle_1.spr \
  star_middle_2.spr \
  star_middle_3.spr \
  star_middle_4.spr \
  star_middle_5.spr \
  star_middle_6.spr \
  star_middle_7.spr \
  star_spaceship_0.spr \
  star_spaceship_1.spr \
  star_spaceship_2.spr \
  star_spaceship_3.spr \
  star_spaceship_4.spr \
  star_spaceship_5.spr \
  star_spaceship_6.spr \
  star_spaceship_7.spr
