
pkgdatadir = $(datadir)/games/powermanga/graphics/sprites/guardians

dist_pkgdata_DATA = \
  guardian_00.spr \
  guardian_01.spr \
  guardian_02.spr \
  guardian_03.spr \
  guardian_04.spr \
  guardian_05.spr \
  guardian_06.spr \
  guardian_07.spr \
  guardian_08.spr \
  guardian_09.spr \
  guardian_10.spr \
  guardian_11.spr \
  guardian_12.spr \
  guardian_13.spr
