
pkgdatadir = $(datadir)/games/powermanga/data/levels/grids_phase

dist_pkgdata_DATA = \
 grid_00.bin \
 grid_01.bin \
 grid_02.bin \
 grid_03.bin \
 grid_04.bin \
 grid_05.bin \
 grid_06.bin \
 grid_07.bin \
 grid_08.bin \
 grid_09.bin \
 grid_10.bin \
 grid_11.bin \
 grid_12.bin \
 grid_13.bin \
 grid_14.bin \
 grid_15.bin \
 grid_16.bin \
 grid_17.bin \
 grid_18.bin \
 grid_19.bin \
 grid_20.bin \
 grid_21.bin \
 grid_22.bin \
 grid_23.bin \
 grid_24.bin \
 grid_25.bin \
 grid_26.bin \
 grid_27.bin \
 grid_28.bin \
 grid_29.bin \
 grid_30.bin \
 grid_31.bin \
 grid_32.bin \
 grid_33.bin \
 grid_34.bin \
 grid_35.bin \
 grid_36.bin \
 grid_37.bin \
 grid_38.bin \
 grid_39.bin \
 grid_40.bin \
 grid_41.bin \
 grid_50.bin
