
pkgdatadir = $(datadir)/games/powermanga/graphics/sprites/meteors

dist_pkgdata_DATA = \
  meteor_00.spr \
  meteor_01.spr \
  meteor_02.spr \
  meteor_03.spr \
  meteor_04.spr \
  meteor_05.spr \
  meteor_06.spr \
  meteor_07.spr \
  meteor_08.spr \
  meteor_09.spr \
  meteor_10.spr \
  meteor_11.spr \
  meteor_12.spr \
  meteor_13.spr \
  meteor_14.spr \
  meteor_15.spr \
  meteor_16.spr \
  meteor_17.spr \
  meteor_18.spr \
  meteor_19.spr \
  meteor_20.spr \
  meteor_21.spr \
  meteor_22.spr \
  meteor_23.spr \
  meteor_24.spr \
  meteor_25.spr \
  meteor_26.spr \
  meteor_27.spr \
  meteor_28.spr \
  meteor_29.spr \
  meteor_30.spr \
  meteor_31.spr \
  meteor_32.spr \
  meteor_33.spr \
  meteor_34.spr \
  meteor_35.spr \
  meteor_36.spr \
  meteor_37.spr \
  meteor_38.spr \
  meteor_39.spr \
  meteor_40.spr \
  meteor_41.spr \
  meteor_42.spr 
